# headless-db-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: docker-publish.yml
crates/connection-profiles/: Cargo.toml
crates/connection-profiles/src/: error.rs  lib.rs  manager.rs  metadata_store.rs  profile.rs
crates/connections/: Cargo.toml
crates/connections/src/: lib.rs  manager.rs  test_support.rs
crates/connections/src/tools/: connect.rs  delete_connection_profile.rs  describe_table.rs  disconnect.rs  execute_query.rs  get_connection_status.rs  list_connection_profiles.rs  list_connections.rs  list_databases.rs  list_schemas.rs  list_tables.rs  mod.rs  save_connection_profile.rs  support.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  driver.rs  error.rs  lib.rs  limits.rs  result.rs  schema.rs  timeouts.rs  transport.rs  value.rs
crates/driver-clickhouse/: Cargo.toml
crates/driver-clickhouse/src/: driver.rs  error.rs  ident.rs  jsonl.rs  lib.rs  params.rs  query.rs  request.rs  schema.rs  statement.rs  stream.rs  tls.rs  tsv.rs
crates/driver-clickhouse/tests/: integration.rs
crates/driver-postgres/: Cargo.toml
crates/driver-postgres/src/: config.rs  convert.rs  driver.rs  error.rs  ident.rs  lib.rs  params.rs  query.rs  schema.rs  stream.rs  tls.rs
crates/driver-postgres/tests/: integration.rs
crates/driver-redis/: Cargo.toml
crates/driver-redis/src/: command.rs  config.rs  convert.rs  driver.rs  error.rs  lib.rs  query.rs  schema.rs  stream.rs
crates/driver-redis/tests/: integration.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: audit.rs  lib.rs  registry.rs  session.rs  tool.rs
crates/mcp-server/src/tools/: echo.rs  mod.rs  ping.rs
crates/mcp-wire/: Cargo.toml
crates/mcp-wire/src/: jsonrpc.rs  lib.rs  sse.rs
crates/registry/: Cargo.toml
crates/registry/src/: attempt_token.rs  connection_registry.rs  lib.rs  session_registry.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: error.rs  file_store.rs  lib.rs  master_key.rs  store.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/transport-http/: Cargo.toml
crates/transport-http/src/: auth.rs  handlers.rs  lib.rs  rate_limit.rs  router.rs  sse_demo.rs  state.rs
crates/transport-stdio/: Cargo.toml
crates/transport-stdio/src/: lib.rs
