[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/secrets",
    "crates/registry",
    "crates/mcp-wire",
    "crates/mcp-server",
    "crates/transport-stdio",
    "crates/transport-http",
    "crates/driver-postgres",
    "crates/driver-redis",
    "crates/driver-clickhouse",
    "crates/connections",
    "crates/server",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "net", "signal"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures-core = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
governor = "0.6"
subtle = "2"
tokio-postgres = "0.7"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
async-stream = "0.3"

[profile.release]
lto = true
codegen-units = 1
