[package]
name = "db-headless-connection-profiles"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Named, persisted connection profiles: non-secret metadata on disk, credentials resolved from db-headless-secrets."

[dependencies]
db-headless-core = { path = "../core" }
db-headless-secrets = { path = "../secrets" }
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy = { version = "0.10", features = ["serde"] }
tempfile = "3"

[dev-dependencies]
tokio.workspace = true
