[package]
name = "db-headless-core"
version = "0.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Driver contract and transfer types shared by every database backend and the MCP server."

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
serde.workspace = true
thiserror.workspace = true
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
tokio.workspace = true
futures-util = "0.3"
serde_json.workspace = true
