[package]
name = "db-headless-driver-clickhouse"
version = "0.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ClickHouse DatabaseDriver implementation via its HTTP interface."

[dependencies]
db-headless-core = { path = "../core" }
reqwest = { workspace = true, features = ["stream"] }
tokio.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util = "0.3"
async-stream.workspace = true
tracing.workspace = true
secrecy = { version = "0.10", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["clickhouse"] }
tokio = { workspace = true, features = ["full"] }
