[package]
name = "db-headless-mcp-server"
version = "0.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Transport-agnostic MCP session: tool registry, request/notification dispatch, audit logging."

[dependencies]
db-headless-mcp-wire = { path = "../mcp-wire" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
