[package]
name = "db-headless-mcp-wire"
version = "0.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "JSON-RPC 2.0 message types and SSE event framing for the MCP protocol layer."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
