[package]
name = "db-headless-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Connection lifecycle bookkeeping with generation-fenced cancellation."

[dependencies]
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
