[package]
name = "db-headless-secrets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Credential storage abstraction (encrypted-at-rest by default)."

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy = { version = "0.10", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1"
hex = "0.4"
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
tokio.workspace = true
