[package]
name = "db-headless-transport-http"
version = "0.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Streamable HTTP+SSE MCP transport with bearer-token auth and per-token rate limiting."

[dependencies]
db-headless-mcp-wire = { path = "../mcp-wire" }
db-headless-mcp-server = { path = "../mcp-server" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
governor.workspace = true
subtle.workspace = true
futures-core.workspace = true

[dev-dependencies]
async-trait.workspace = true
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"
