[package]
name = "db-headless-transport-stdio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Newline-delimited JSON-RPC over stdio for local/dev MCP use."

[dependencies]
db-headless-mcp-wire = { path = "../mcp-wire" }
db-headless-mcp-server = { path = "../mcp-server" }
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
